[package]
name = "rust_ldraw"
version = "0.1.0"
authors = ["Paul Page <pjpage98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
# glutin = "0.22"
# takeable-option = "0.5"
vulkano = "0.19"
vulkano-shaders = "0.19"
image = "0.22"
vulkano-win = "0.16"
cgmath = "0.17"

[dependencies.shaderc]
version = "0.6"
features = ["build-from-source"]

[build-dependencies]
gl_generator = "0.13"

