[package]
name = "ld_glutin"
version = "0.1.0"
authors = ["Paul Page <pjpage98@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17"
glutin = "0.24"

[build-dependencies]
gl_generator = "0.13"

[profile.release]
debug = true
